--- a/src/libsync/CMakeLists.txt
+++ b/src/libsync/CMakeLists.txt
@@ -75,7 +75,7 @@ set(libsync_SRCS
 if(TOKEN_AUTH_ONLY)
     set (libsync_SRCS ${libsync_SRCS} creds/tokencredentials.cpp)
 else()
-    set (libsync_SRCS ${libsync_SRCS} creds/httpcredentials.cpp)
+    set (libsync_SRCS ${libsync_SRCS} creds/httpcredentials.cpp creds/oathcredentials2.cpp)
 endif()
 
 # These headers are installed for libowncloudsync to be used by 3rd party apps
